# twitter-scraper-lite

./: .gitignore  README.md  pyproject.toml  test_manual.py
.github/workflows/: publish.yml  test.yml
tests/: test_cli.py  test_scraper.py
x_scraper/: __init__.py  __main__.py  cli.py  constants.py  run_handle.py  scraper.py
