[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter-scraper-lite"
version = "1.1.0"
description = "The fastest and cheapest way to scrape tweets from X (Twitter). Wraps the Apify Twitter Scraper Lite actor with a developer-friendly API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "twitter",
    "x",
    "scraper",
    "tweets",
    "apify",
    "twitter-scraper",
    "x-scraper",
    "social-media",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "apify-client>=1.8.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
]

[project.scripts]
x-scraper = "x_scraper.cli:main"

# [project.urls]
# Repository = ""

[tool.setuptools.packages.find]
include = ["x_scraper*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["x_scraper"]
